# asteroids

./: README.md  pyproject.toml  train_config.yaml
src/: game_test.py  train_dqn.py  upgrade_pth_format.py
src/asteroids_env/: env.py
src/evaluation/: evaluate_policy.py
src/training/: dqn_model.py  replay_buffer.py
src/utils/: model_io.py  preprocess.py
