[project]
name = "asteroids"
version = "0.1.0"
description = "Training a neural network to play Asteroids using reinforcement learning techniques."
authors = [
    {name = "James Hughes",email = "jhughes2712@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "gymnasium (>=1.2.1,<2.0.0)",
    "opencv-python-headless (>=4.12.0.88,<5.0.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "imageio (>=2.37.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
